Bug 117103 - Warning error is empty
Summary: Warning error is empty
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-04-19 11:35 UTC by Xisco Faulí
Modified: 2018-04-20 09:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-04-19 11:35:49 UTC
Steps to reproduce:
1. Open attachment 140443 [details] from bug 116274

Observed behaviour: 'The data could not be loaded completely because the maximum number of columns per sheet was exceeded.' is missing

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: cb5f6503f593d7c7a719542281b9efd274134f7c
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2018-04-19 11:37:49 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-03-16 16:35:00 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-03-19 07:36:12 +0100
commit e9c74a075c3c0809b993c017c11d1505bd244dc8 (patch)
tree 88cf68873c9b60941ced2ae0fda040496cbe0e2d
parent 9d75bfcfaef97b247b3b6cd346eb27e02ae7b010 (diff)
drop ErrCode::GetRest
it was always a broken API because it includes the code, the class, and
only part of the subsystemarea.

Bisected with: bibisect-linux64-6.1

Adding Cc: to Noel Grandin
Comment 2 Commit Notification 2018-04-19 13:34:03 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a1ad6ee008d5100fb256bba3134ba628afc32f88

tdf#117103 Warning error is empty

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2018-04-20 09:13:34 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: ffa6c70deb054c0dff4aab5a6ba5a03d0225d32d
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Noel, thanks for fixing this!!