tdf#117103 Warning error is empty

regression from
    commit e9c74a075c3c0809b993c017c11d1505bd244dc8
    drop ErrCode::GetRest

Change-Id: I937478dbc9dd217255dc5cdecb6cf66d55394cba