uui/source/iahndl.cxx
@@ -1281,7 +1281,7 @@ bool ErrorResource::getString(ErrCode nErrorCode, OUString &rString) const
 {
     for (const std::pair<const char*, ErrCode>* pStringArray = m_pStringArray; pStringArray->first != nullptr; ++pStringArray)
     {
-        if (nErrorCode.StripWarningAndDynamic() == pStringArray->second)
+        if (nErrorCode.StripWarningAndDynamic() == pStringArray->second.StripWarningAndDynamic())
         {
             rString = Translate::get(pStringArray->first, m_rResLocale);
             return true;
